# Scout-mini-obstacle-avoidance

./: README.md  package.xml  setup.py
launch/: avoid_obstacles_launch.py
obstacle_avoidance/: avoid_obstacles.py
